[package]
name = "uc8159"
description = "A driver for the uc8159 e-ink controller, found for example in the Pimoroni Inky Impression display"
version = "0.1.0"
authors = ["David Flemström <david.flemstrom@gmail.com>"]
repository = "https://github.com/dflemstr/uc8159"
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = { version = "0.2.4", features = ["unproven"] }

[dev-dependencies]
anyhow = "1.0.38"
image = "0.23.12"
rppal = { version = "0.11.3", features = ["hal-unproven"] }
thiserror = "1.0.23"
